# tic_tac_toe

./: meson.build  readme.md
.github/workflows/: ci_build_linux_host.yml  ci_build_macos_host.yml  ci_build_win10_host.yml  code_linter.yml
modules/code/: meson.build  messages.cc  project.cc  project.h
modules/main/: main.cc  meson.build
modules/test/: meson.build  test_cases.cc  test_runner.cc
